--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,3 +2,7 @@ name: ReplayAPI
 version: 1.0
 api-version: 1.8
 main: cf.pies.ReplayAPI.core.BukkitMain
+author: hi12167pies
+website: pies.cf
+description: API To help you recording and playback.
+
